syntax = "proto3";

package hospital;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.example.hospital";

service HospitalService {
    rpc CreateHospital(CreateHospitalRequest) returns (CreateHospitalResponse);
    rpc UpdateHospital(HospitalProto) returns (HospitalProto);
    rpc DeleteHospital(DeleteHospitalRequest) returns (DeleteHospitalResponse);
    rpc GetHospital(GetHospitalRequest) returns (GetHospitalResponse){}

    rpc CreatePatient(CreatePatientRequest) returns (CreatePatientResponse);
    rpc UpdatePatient(PatientProto) returns (PatientProto);
    rpc DeletePatient(DeletePatientRequest) returns (DeletePatientResponse);
    rpc GetPatient(GetPatientRequest) returns (GetPatientResponse){}

    rpc RegisterPatientInHospital(RegisterPatientRequest) returns (RegisterPatientResponse);
    rpc UnRegisterPatientInHospital(RegisterPatientRequest) returns (RegisterPatientResponse);

    // Special Request
    rpc GetAverageAgeBySexAndMonth (google.protobuf.Empty) returns (AverageAgeResponse);
}

message HospitalProto{
    int64 id = 1;
    string name = 2;
    string address = 3;
}

message PatientProto{
    int64 id = 1;
    string name = 2;
    string sex = 3;
    string age = 4;
    string phone = 5;
    string address = 6;
}

message CreateHospitalRequest {
    string name = 1;
    string address = 2;
}

message CreateHospitalResponse {
    optional HospitalProto hospital = 1;
}

message DeleteHospitalRequest {
    int64 id = 1;
}
message DeleteHospitalResponse {
    int64 status_code = 1;
}

message GetHospitalRequest {
    int64 id = 1;
}
message GetHospitalResponse {
    optional HospitalProto hospital = 1;
    repeated PatientProto patients = 2;
}

message CreatePatientRequest {
    string name = 1;
    string sex = 2;
    string age = 3;
    string phone = 4;
    string address = 5;
}
message CreatePatientResponse {
    optional PatientProto patient = 1;
}

message DeletePatientRequest {
    int64 id = 1;
}
message DeletePatientResponse {
    int64 status_code = 1;
}

message GetPatientRequest {
    int64 id = 1;
}
message GetPatientResponse {
    optional PatientProto patient = 1;
    repeated HospitalProto hospitals = 2;
}

message RegisterPatientRequest {
    int64 patient_id = 1;
    int64 hospital_id = 2;
}
message RegisterPatientResponse {
    int64 status_code = 1;
}

message UnregisterPatientRequest {
    int64 patient_id = 1;
    int64 hospital_id = 2;
}
message UnregisterPatientResponse {
    int64 status_code = 1;
}

message AverageAgeResponse {
    repeated SexAndAgePerMonth sex_and_age_per_month = 1;

    message SexAndAgePerMonth {
        string sex = 1;
        int32 month = 2;
        float average_age = 3;
    }
}
